--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,9 @@ git push
 
 npm run dev -- development
 npm run prod -- production
+
+git add dist && git commit -m "Initial dist subtree commit"
+git subtree push --prefix dist origin gh-pages
 -->
 <html>
 <head>
