--- a/src/acne.html
+++ b/src/acne.html
@@ -19,7 +19,7 @@
 		<div id="showmenu" class="header_contact pinkify button">Contact</div>
 		<div  class="overlay">
 			<div class="overlay_button">
-				<a href="../assets/resume_hwanlee.pdf" target="_blank" class="link_style_fix overlay_button_inner pinkify">Resume</a>
+				<a href="resume_hwanlee.pdf" target="_blank" class="link_style_fix overlay_button_inner pinkify">Resume</a>
 			</div>
 			<div class="overlay_button">
 				<a href = "mailto: jacobhwanlee17@gmail.com" class="link_style_fix overlay_button_inner pinkify">Email</a>
