--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,15 @@ Add CNAME in github
 -->
 <html>
 <head>
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-176268768-1"></script>
+		<script>
+		  window.dataLayer = window.dataLayer || [];
+		  function gtag(){dataLayer.push(arguments);}
+		  gtag('js', new Date());
+
+		  gtag('config', 'UA-176268768-1');
+		</script>
 	<title>Jacob Hwan Lee</title>
 	<link rel="icon" type="image/png" href="../assets/icons/favicon.png"/>
 	<link rel="stylesheet" type="text/css" href="../sass/main.scss">
